--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "dev": "tsx watch src/shared/infra/http/server.ts"
+    "dev": "tsx watch src/shared/infra/http/server.ts",
+    "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,8 @@
     "@supabase/supabase-js": "^2.45.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0",
     "zod": "^3.23.8"
   }
 }
