--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^8.0.1",
+    "@fastify/multipart": "^8.3.0",
     "@fastify/rate-limit": "^9.1.0",
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
@@ -33,6 +34,7 @@
     "knex": "^3.1.0",
     "pg": "^8.12.0",
     "resend": "^4.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   }
 }
