--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fastify/rate-limit": "^9.1.0",
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "handlebars": "^4.7.8",
@@ -35,6 +36,7 @@
     "pg": "^8.12.0",
     "resend": "^4.0.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.4.0"
   }
 }
