--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "knex-paginate": "^3.1.4",
     "pg": "^8.12.0",
     "resend": "^4.0.0",
     "xlsx": "^0.18.5",
