--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.5.4",
+    "@types/pdfkit": "^0.13.5",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "eslint": "^8.57.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
@@ -25,7 +27,6 @@
     "@fastify/jwt": "^8.0.1",
     "@fastify/multipart": "^8.3.0",
     "@fastify/rate-limit": "^9.1.0",
-    "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "knex-paginate": "^3.1.4",
+    "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
     "resend": "^4.0.0",
     "xlsx": "^0.18.5",
