--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.4",
-    "@types/pdfkit": "^0.13.5",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "@types/jsonwebtoken": "^9.0.6",
     "eslint": "^8.57.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
@@ -35,8 +34,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "knex-paginate": "^3.1.4",
-    "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
+    "puppeteer": "^23.4.0",
     "resend": "^4.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
